add headers for each list

--- a/cities.html
+++ b/cities.html
@@ -16,14 +16,14 @@
 
 <body>
 
-
+    <h1>Last 3 cities I have lived in</h1>
     <ul>
         <li>Augusta</li>
         <li>Stuttgart</li>
         <li>Grafenwhor</li>
     </ul>
 
-
+    <h1>Top 3 cities I would still like to visit.</h1>
     <ol>
         <li>Tokyo</li>
         <li>Bogata</li>
