add litle bio for each list

--- a/cities.html
+++ b/cities.html
@@ -22,14 +22,14 @@
         <li>Stuttgart</li>
         <li>Grafenwhor</li>
     </ul>
-
+    <p>I lived in these places mainly because the Army told me to go there. But I did ask to go to Germany. That was a lot of fun.</p>
     <h1>Top 3 cities I would still like to visit.</h1>
     <ol>
         <li>Tokyo</li>
         <li>Bogata</li>
         <li>Toronto</li>
     </ol>
-
+    <p>I have already traveled to a lot of cool places. But these are really the places I still haven't been to yet.</p>
 
 
 
