--- a/cities.html
+++ b/cities.html
@@ -25,7 +25,7 @@
     <p>I lived in these places mainly because the Army told me to go there. But I did ask to go to Germany. That was a lot of fun.</p>
     <h1>Top 3 cities I would still like to visit.</h1>
     <ol>
-        <li>Tokyo <span>&#128077; &#128077; &#128077;</span></li>
+        <strong><li>Tokyo <span>&#128077; &#128077; &#128077;</span></li></strong>
         <li>Bogata <span>&#128077; &#128077;</span></li>
         <li>Toronto <span>&#128077;</span></li>
     </ol>
