--- a/cities.html
+++ b/cities.html
@@ -16,6 +16,9 @@
 
 <body>
 
+
+    <img src="http://i.giphy.com/fVMFiUwkZgpfG.gif" alt="Cats and Stacks">
+
     <h1>Last 3 cities I have lived in</h1>
     <ul>
         <li>Augusta</li>
@@ -27,7 +30,7 @@
     <ol>
         <strong><li>Tokyo <span>&#128077; &#128077; &#128077;</span></li></strong>
         <li>Bogata <span>&#128077; &#128077;</span></li>
-        <li>Toronto <span>&#128077;</span></li>
+        <strong><li>Toronto <span>&#128077;</span></li></strong>
     </ol>
     <p>I have already traveled to a lot of cool places. But these are really the places I still haven't been to yet.</p>
 
